   package to be installed is newer than the installed
   version. version is more significant than date.
** --packageversion=VERSION is now respected by --extract and --install.
   when --extract downloads from the MOGUL archive, it will look for
   the given version of the package.  --install will signal an error
   if the package to be installed doesn't have the given version.

* version 0.75
** ozmake --create will now automatically pick a package filename if none
   is given: it will be formed using the mogul id and the version number
   if any.
** ozmake --mogul=export now checks that there is no section entry that
   has the same mogul id as a package or contact.
** more checks are applied to the `author' feature to make sure that
   they don't contain a stupid mistake
** order is now preserved in `requires'
** ozmake --extract -p MOG will now properly download the package denoted
   by mogul id MOG from the MOGUL archive (if it was published using
   ozmake --publish, i.e. follows the right naming convention).
** ozmake --fast will invoke the compiler module directly without spawning
   a new process each time.  This is easily 2 to 3 times faster.

* version 0.74
** `requires' field now properly saved in mogul.db and is properly exported
** pkg files are now compressed and much smaller
** makefiles now support the `provides' feature to override the default
   computed from the bin and lib features.  Note that the `provides' feature
   of a makefile does not also override its submakefiles; each one should
   supply its own `provides' if desired.  `provides:nil' is a simple way of
   indicating that the makefile provides no public functors or executables.

* version 0.73
** makefiles now support the 'contact' feature to specify MOGUL contact
   information:

       makefile(
         ...
         contact :
           o(
              mogul : 'mogul:/duchier/denys'
              name  : 'Denys Duchier'
              email : 'duchier@ps.uni-sb.de'